# bank-statement-import

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
account_statement_import_base/: README.rst  __manifest__.py
account_statement_import_base/i18n/: account_statement_import_base.pot  it.po
account_statement_import_base/models/: account_bank_statement_line.py  account_journal.py
account_statement_import_base/readme/: CONTRIBUTORS.md  DESCRIPTION.md
account_statement_import_base/views/: account_bank_statement_line.xml
account_statement_import_camt/: README.rst  __manifest__.py
account_statement_import_camt/i18n/: account_statement_import_camt.pot  de.po  es.po  fa.po  fi.po  fr.po  fr_CH.po  gl.po  hr.po  it.po  lt_LT.po  nb_NO.po  nl.po  pt_BR.po  pt_PT.po  sl.po
account_statement_import_camt/models/: account_journal.py  account_statement_import.py  account_statement_import_camt_parser.py
account_statement_import_camt/readme/: CONTRIBUTORS.md  CREDITS.md
account_statement_import_camt/tests/: test_import_bank_statement.py
account_statement_import_camt54/: README.rst  __manifest__.py
account_statement_import_file/: README.rst  __manifest__.py
account_statement_import_move_line/: README.rst  __manifest__.py
account_statement_import_ofx/: README.rst
account_statement_import_online_gocardless/: README.rst  __manifest__.py
account_statement_import_online_ponto/: README.rst  __manifest__.py
account_statement_import_sheet_file/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+160 files in other folders)
