[project]
name = "odoo-addons-oca-bank-statement-import"
version = "18.0.20241217.1"
dependencies = [
    "odoo-addon-account_statement_import_base==18.0.*",
    "odoo-addon-account_statement_import_file==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
